--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Blog"
 author: "Zoya Naseer Hashmi"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "A Place Where We Learn Together!" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
